<resources>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>

</resources>